--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #b4e5ff;
+  background-color: #fffbf7;
 }
 
 h1 {
@@ -28,6 +28,14 @@ button {
   font-family: sans-serif;
 }
 
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fffbf7;
+}
+
 li {
   display: inline;
   margin: 0 25px 0;
@@ -50,7 +58,7 @@ li {
 }
 
 .navbar {
-  width: 70%;
+  width: 60%;
   text-align: center;
   color: #025157;
   font-weight: 500;
@@ -80,6 +88,57 @@ li {
 }
 
 .main {
-  margin-top: 140px;
+  margin-top: 285px;
   text-align: center;
+}
+
+.publish {
+  /* container styles if any */
+  margin-left: 30px;
+}
+
+.publish h3 {
+  font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form p {
+  color: #025157;
+  margin-right: 18px;
+}
+
+.promo {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+  align-items: center;
+}
+
+iframe {
+  display: flex;
+  margin: auto;
+}
+
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.explanatory-video img {
+  width: 120px;
+  margin-top: 10px;
 }
