--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,14 @@ iframe {
   width: 120px;
   margin-top: 10px;
 }
+
 .features {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template: repeat(2, 1fr) / repeat(2, 330px);
+  /*
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 660px;
+  grid-template-rows: repeat(2, 1fr);
+  */
 }
