--- a/styles.css
+++ b/styles.css
@@ -145,11 +145,11 @@ iframe {
 
 .features {
   display: grid;
-  grid-template: repeat(2, 1fr) / repeat(2, 330px);
   /*
-  display: grid;
   grid-template-columns: repeat(2, 1fr);
   height: 660px;
   grid-template-rows: repeat(2, 1fr);
   */
+  height: 660px;
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
 }
