--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
 }
 
 h1 {
+  font-size: 60px;
   color: #025157;
   text-align: center;
   font-family: 'Alegreya', serif;
@@ -58,14 +59,12 @@ li {
 }
 
 .navbar {
-  width: 60%;
   text-align: center;
   color: #025157;
   font-weight: 500;
 }
 
 .actions {
-  width: 15%;
   text-align: right;
   font-size: 14px;
   font-weight: 600;
@@ -130,6 +129,8 @@ li {
 iframe {
   display: flex;
   margin: auto;
+  width: 560px;
+  height: 315px;
 }
 
 .explanatory-video {
@@ -144,15 +145,13 @@ iframe {
 }
 
 .features {
+  margin-top: 5%;
   background-color: #025157;
   padding: 5% 10%;
   display: grid;
-  /*
-  grid-template-columns: repeat(2, 1fr);
+  /* grid-template-columns: repeat(2, 1fr); */
   height: 660px;
-  grid-template-rows: repeat(2, 1fr);
-  */
-  height: 660px;
+  /* grid-template-rows: repeat(2, 1fr); */
   grid-template: repeat(2, 1fr) / repeat(2, 1fr);
 }
 
@@ -195,7 +194,7 @@ iframe {
 }
 
 .features .feature-card .feature-content a {
-  font-size: 18px;
+  font-size: 16px;
   color: #67b54b;
   font-weight: 600;
   text-decoration: none;
@@ -205,7 +204,7 @@ iframe {
   flex: 1;
   width: 40%;
   position: relative;
-  right: -5px;
+  right: -50px;
   height: 80%;
 }
 
@@ -214,3 +213,90 @@ iframe {
   margin-top: 0;
   height: 100%;
 }
+
+/** dispositivos móviles en vista viewport (vertical) */
+@media (max-width: 575px){
+  /* .navbar,
+  .actions {
+    display: none;
+  } */
+
+  .main {
+    margin-top: 130px;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  .banner > img {
+    width: 100%;
+  }
+
+  .publish > form {
+    flex-direction: column;
+  }
+
+  .publish > form > div {
+    height: 50px;
+    margin-top: 10px;
+  }
+
+  .publish > form > div > input {
+    width: 65%;
+  }
+
+  .promo {
+    flex-direction: column;
+    max-width: 90%;
+  }
+
+  .explanatory-video > video {
+    width: 100%;
+  }
+
+  .publish {
+    margin-top: 10px;
+  }
+
+  .publish > h3 {
+    font-size: 25px;
+    line-height: 1.2;
+  }
+
+  iframe{
+    width: 100%;
+    height: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .features {
+    grid-template: repeat(4, 1fr) / 1fr;
+    padding-left: 0;
+    padding-right: 0;
+    height: 100%;
+  }
+
+  .feature-image {
+    display: none;
+  }
+}
+
+/** dispositivos pequeños en vista landscape (horizontal) */
+@media (min-width: 576px) and (max-width: 767px) {
+  
+}
+
+/** dispositivos medianos (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+/** dispositivos grandes (desktops) */
+@media (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/** dispositivos extra grandes (monitores grandes, tvs) */
+@media (min-width: 1200px) {
